bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q8 (Execution Plan, plain-term).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[vendor@0 as vendor, ENC_PT(cheapExpensiveRatio@3) as cheapExpensiveRatio]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(DIV(xsd:float(belowAvg@1), offerCount@2)) DESC, ENC_SORT(ENC_TF(vendor@0)) ASC], preserve_partitioning=[false], filter=[ENC_SORT(DIV(xsd:float(belowAvg@1), offerCount@2)) IS NULL OR ENC_SORT(DIV(xsd:float(belowAvg@1), offerCount@2)) > {type:4,numeric:0.48148149251937866,bytes:302e34383134383135} OR ENC_SORT(DIV(xsd:float(belowAvg@1), offerCount@2)) = {type:4,numeric:0.48148149251937866,bytes:302e34383134383135} AND (ENC_SORT(ENC_TF(vendor@0)) IS NULL OR ENC_SORT(ENC_TF(vendor@0)) < {type:2,numeric:,bytes:687474703a2f2f777777342e7769776973732e66752d6265726c696e2e64652f62697a65722f6273626d2f7630312f696e7374616e6365732f6461746146726f6d56656e646f72362f56656e646f7236})]
    ProjectionExec: expr=[vendor@0 as vendor, belowAvg@1 as belowAvg, offerCount@2 as offerCount, DIV(xsd:float(belowAvg@1), offerCount@2) as cheapExpensiveRatio]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@0)], projection=[vendor@0, belowAvg@1, offerCount@3]
        ProjectionExec: expr=[vendor@0 as vendor, <uuid>@1 as belowAvg]
          AggregateExec: mode=Single, gby=[vendor@1 as vendor], aggr=[<uuid>]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], filter=EBV(LT(xsd:float(xsd:string(ENC_TF(price@0))), avgPrice@1)), projection=[offer@1, vendor@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, offer@1, vendor@2, price@4]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, offer@1, vendor@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>], blank_node_mode=Variable
                    FilterExec: DynamicFilter [ product@1 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@1 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]]
                  FilterExec: DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]]
                FilterExec: DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]]
              ProjectionExec: expr=[product@0 as product, <uuid>@1 as avgPrice]
                AggregateExec: mode=Single, gby=[product@0 as product], aggr=[<uuid>]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, price@3]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, offer@1]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                        FilterExec: DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]
                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]]
                        FilterExec: DynamicFilter [ product@1 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]
                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@1 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]]
                      FilterExec: DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, projection=[offer], pushed_filters=[DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]]
                    FilterExec: DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]]
        ProjectionExec: expr=[vendor@0 as vendor, <uuid>@1 as offerCount]
          AggregateExec: mode=Single, gby=[vendor@1 as vendor], aggr=[<uuid>]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[offer@1]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>], blank_node_mode=Variable
                FilterExec: DynamicFilter [ product@1 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@1 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product1,data_type:,language_tag:} AND product@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product448,data_type:,language_tag:} AND hash_lookup ]]
              FilterExec: DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1008,data_type:,language_tag:} AND offer@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Offer16505,data_type:,language_tag:} AND hash_lookup ]]
