bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q8 (Optimized).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(vendor) AS vendor, ENC_PT(cheapExpensiveRatio) AS cheapExpensiveRatio
  Sort: ENC_SORT(DIV(xsd:float(belowAvg), offerCount)) DESC NULLS FIRST, ENC_SORT(ENC_TF(ENC_PT(vendor))) ASC NULLS FIRST, fetch=10
    Projection: vendor, belowAvg, offerCount, DIV(xsd:float(belowAvg), offerCount) AS cheapExpensiveRatio
      Projection: lhs.vendor AS vendor, lhs.belowAvg AS belowAvg, rhs.offerCount AS offerCount
        Inner Join: lhs.vendor = rhs.vendor
          SubqueryAlias: lhs
            Projection: vendor, INT64_AS_TERM(<uuid>) AS belowAvg
              Aggregate: groupBy=[[vendor AS vendor]], aggr=[[count(offer) AS <uuid>]]
                Projection: lhs.offer AS offer, lhs.vendor AS vendor
                  Inner Join: lhs.product = rhs.product Filter: EBV(LT(xsd:float(xsd:string(ENC_TF(lhs.price))), rhs.avgPrice))
                    SubqueryAlias: lhs
                      Projection: lhs.product AS product, lhs.offer AS offer, lhs.vendor AS vendor, rhs.price AS price
                        Inner Join: lhs.offer = rhs.offer
                          SubqueryAlias: lhs
                            Projection: lhs.product AS product, lhs.offer AS offer, rhs.vendor AS vendor
                              Inner Join: lhs.offer = rhs.offer
                                SubqueryAlias: lhs
                                  Projection: lhs.product AS product, rhs.offer AS offer
                                    Inner Join: lhs.product = rhs.product
                                      SubqueryAlias: lhs
                                        QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>)
                                      SubqueryAlias: rhs
                                        QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product)
                                SubqueryAlias: rhs
                                  QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor)
                          SubqueryAlias: rhs
                            QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price)
                    SubqueryAlias: rhs
                      Projection: product, <uuid> AS avgPrice
                        Aggregate: groupBy=[[product AS product]], aggr=[[AVG(xsd:float(xsd:string(ENC_TF(price)))) AS <uuid>]]
                          Projection: lhs.product AS product, rhs.price AS price
                            Inner Join: lhs.offer = rhs.offer
                              SubqueryAlias: lhs
                                Projection: lhs.product AS product, lhs.offer AS offer
                                  Inner Join: lhs.offer = rhs.offer
                                    SubqueryAlias: lhs
                                      Projection: lhs.product AS product, rhs.offer AS offer
                                        Inner Join: lhs.product = rhs.product
                                          SubqueryAlias: lhs
                                            QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>)
                                          SubqueryAlias: rhs
                                            QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product)
                                    SubqueryAlias: rhs
                                      Projection: offer
                                        QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor)
                              SubqueryAlias: rhs
                                QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price)
          SubqueryAlias: rhs
            Projection: vendor, INT64_AS_TERM(<uuid>) AS offerCount
              Aggregate: groupBy=[[vendor AS vendor]], aggr=[[count(offer) AS <uuid>]]
                Projection: lhs.offer AS offer, rhs.vendor AS vendor
                  Inner Join: lhs.offer = rhs.offer
                    SubqueryAlias: lhs
                      Projection: rhs.offer AS offer
                        Inner Join: lhs.product = rhs.product
                          SubqueryAlias: lhs
                            QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4>)
                          SubqueryAlias: rhs
                            QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product)
                    SubqueryAlias: rhs
                      QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor)
